--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,21 +13,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-21 Tue 14:55]
+#+CAPTION: Clock summary at [2019-05-21 Tue 14:59]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *14:07* |       |      | 100.0 |
+| *Total time*                                           | *14:10* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 14:07   |       |      | 100.0 |
-| Active                                                 |         | 14:07 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  25.6 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  26.7 |
+| Stories                                                | 14:10   |       |      | 100.0 |
+| Active                                                 |         | 14:10 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  25.5 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  26.6 |
 | Sprint and product backlog grooming                    |         |       | 0:22 |   2.6 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  19.5 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  19.4 |
 | Flatten the data directory                             |         |       | 1:11 |   8.4 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.8 |
-| Add code generation support to static configurations   |         |       | 2:11 |  15.5 |
+| Add code generation support to static configurations   |         |       | 2:14 |  15.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,7 @@ Tasks:
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-21 Tue 14:56]--[2019-05-21 Tue 14:59] =>  0:03
     CLOCK: [2019-05-21 Tue 14:34]--[2019-05-21 Tue 14:55] =>  0:21
     CLOCK: [2019-05-21 Tue 14:19]--[2019-05-21 Tue 14:33] =>  0:14
     CLOCK: [2019-05-21 Tue 14:09]--[2019-05-21 Tue 14:18] =>  0:09
