agile: analysis on representing models within the assets meta-model

--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -2672,7 +2672,7 @@ we need to disable CMake generation and do it by hand. However:
   model level. Also, references provide sufficient information to link
   against other dogen models.
 
-*** Handcrafted stereotype would not work on C# models                :story:
+*** Add handcrafted stereotype to C# models                           :story:
 
 At present we do not have any tests for C# models with handcrafted. If
 we did it would not work because the annotations only set the C++
