--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -349,6 +349,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-23 Thu 12:39]
     CLOCK: [2019-05-23 Thu 11:27]--[2019-05-23 Thu 11:56] =>  0:29
     CLOCK: [2019-05-23 Thu 11:13]--[2019-05-23 Thu 11:26] =>  0:13
     CLOCK: [2019-05-23 Thu 11:02]--[2019-05-23 Thu 11:12] =>  0:10
@@ -367,7 +368,7 @@ Time spent reading the literature on variability.
 
 Now that we have all the variability mappings available in the
 meta-model, we can construct the static configuration as a meta-model
-element and supply it to code generation.
+ element and supply it to code generation.
 
 Notes:
 
