--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,23 +13,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-23 Thu 11:26]
+#+CAPTION: Clock summary at [2019-05-23 Thu 13:09]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *18:18* |       |      | 100.0 |
+| *Total time*                                           | *19:17* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 18:18   |       |      | 100.0 |
-| Active                                                 |         | 18:18 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  19.8 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  20.6 |
-| Sprint and product backlog grooming                    |         |       | 0:54 |   4.9 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  15.0 |
-| Flatten the data directory                             |         |       | 1:11 |   6.5 |
-| Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.4 |
-| Rename coding model                                    |         |       | 2:17 |  12.5 |
-| Read variability papers                                |         |       | 0:56 |   5.1 |
-| Add code generation support to static configurations   |         |       | 2:37 |  14.3 |
+| Stories                                                | 19:17   |       |      | 100.0 |
+| Active                                                 |         | 19:17 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  18.8 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  19.5 |
+| Sprint and product backlog grooming                    |         |       | 0:54 |   4.7 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  14.3 |
+| Flatten the data directory                             |         |       | 1:11 |   6.1 |
+| Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.3 |
+| Rename coding model                                    |         |       | 2:17 |  11.8 |
+| Read variability papers                                |         |       | 0:56 |   4.8 |
+| Add code generation support to static configurations   |         |       | 3:36 |  18.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -349,7 +349,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
-    CLOCK: [2019-05-23 Thu 12:39]
+    CLOCK: [2019-05-23 Thu 12:39]--[2019-05-23 Thu 13:09] =>  0:30
     CLOCK: [2019-05-23 Thu 11:27]--[2019-05-23 Thu 11:56] =>  0:29
     CLOCK: [2019-05-23 Thu 11:13]--[2019-05-23 Thu 11:26] =>  0:13
     CLOCK: [2019-05-23 Thu 11:02]--[2019-05-23 Thu 11:12] =>  0:10
