--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,23 +13,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-23 Thu 13:31]
+#+CAPTION: Clock summary at [2019-05-23 Thu 13:49]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *19:38* |       |      | 100.0 |
+| *Total time*                                           | *19:55* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 19:38   |       |      | 100.0 |
-| Active                                                 |         | 19:38 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  18.4 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  19.2 |
-| Sprint and product backlog grooming                    |         |       | 0:54 |   4.6 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  14.0 |
-| Flatten the data directory                             |         |       | 1:11 |   6.0 |
+| Stories                                                | 19:55   |       |      | 100.0 |
+| Active                                                 |         | 19:55 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  18.2 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  18.9 |
+| Sprint and product backlog grooming                    |         |       | 0:54 |   4.5 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  13.8 |
+| Flatten the data directory                             |         |       | 1:11 |   5.9 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.3 |
-| Rename coding model                                    |         |       | 2:17 |  11.6 |
-| Read variability papers                                |         |       | 0:56 |   4.8 |
-| Add code generation support to static configurations   |         |       | 3:57 |  20.1 |
+| Rename coding model                                    |         |       | 2:17 |  11.5 |
+| Read variability papers                                |         |       | 0:56 |   4.7 |
+| Add code generation support to static configurations   |         |       | 4:14 |  21.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -349,6 +349,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-23 Thu 13:32]--[2019-05-23 Thu 13:49] =>  0:17
     CLOCK: [2019-05-23 Thu 13:10]--[2019-05-23 Thu 13:31] =>  0:21
     CLOCK: [2019-05-23 Thu 12:39]--[2019-05-23 Thu 13:09] =>  0:30
     CLOCK: [2019-05-23 Thu 11:27]--[2019-05-23 Thu 11:56] =>  0:29
