--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,15 +13,15 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-23 Thu 14:18]
+#+CAPTION: Clock summary at [2019-05-23 Thu 14:22]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *20:21* |       |      | 100.0 |
+| *Total time*                                           | *20:23* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 20:21   |       |      | 100.0 |
-| Active                                                 |         | 20:21 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  17.8 |
+| Stories                                                | 20:23   |       |      | 100.0 |
+| Active                                                 |         | 20:23 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  17.7 |
 | Create a video demo for the previous sprint's features |         |       | 3:46 |  18.5 |
 | Sprint and product backlog grooming                    |         |       | 0:54 |   4.4 |
 | Make wale templates meta-model elements                |         |       | 2:45 |  13.5 |
@@ -29,7 +29,7 @@
 | Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.2 |
 | Rename coding model                                    |         |       | 2:17 |  11.2 |
 | Read variability papers                                |         |       | 0:56 |   4.6 |
-| Add code generation support to static configurations   |         |       | 4:40 |  22.9 |
+| Add code generation support to static configurations   |         |       | 4:42 |  23.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -349,6 +349,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-23 Thu 14:19]--[2019-05-23 Thu 14:21] =>  0:02
     CLOCK: [2019-05-23 Thu 14:13]--[2019-05-23 Thu 14:18] =>  0:05
     CLOCK: [2019-05-23 Thu 14:02]--[2019-05-23 Thu 14:12] =>  0:10
     CLOCK: [2019-05-23 Thu 13:50]--[2019-05-23 Thu 14:01] =>  0:11
