--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,24 +13,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-24 Fri 14:16]
+#+CAPTION: Clock summary at [2019-05-24 Fri 15:41]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *22:53* |       |      | 100.0 |
+| *Total time*                                           | *25:27* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 22:53   |       |      | 100.0 |
-| Active                                                 |         | 22:53 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  15.8 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  16.5 |
-| Sprint and product backlog grooming                    |         |       | 1:08 |   5.0 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  12.0 |
-| Flatten the data directory                             |         |       | 1:11 |   5.2 |
-| Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.1 |
-| Rename coding model                                    |         |       | 2:17 |  10.0 |
-| Windows build is failing on a number of tests          |         |       | 0:30 |   2.2 |
-| Read variability papers                                |         |       | 0:56 |   4.1 |
-| Add code generation support to static configurations   |         |       | 6:28 |  28.3 |
+| Stories                                                | 25:27   |       |      | 100.0 |
+| Active                                                 |         | 25:27 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  14.2 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  14.8 |
+| Sprint and product backlog grooming                    |         |       | 1:08 |   4.5 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  10.8 |
+| Flatten the data directory                             |         |       | 1:11 |   4.6 |
+| Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.0 |
+| Rename coding model                                    |         |       | 2:17 |   9.0 |
+| Windows build is failing on a number of tests          |         |       | 0:30 |   2.0 |
+| Read variability papers                                |         |       | 0:56 |   3.7 |
+| Add code generation support to static configurations   |         |       | 9:02 |  35.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -392,8 +392,10 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-24 Fri 14:17]--[2019-05-24 Fri 15:41] =>  1:24
     CLOCK: [2019-05-24 Fri 13:12]--[2019-05-24 Fri 14:16] =>  1:04
     CLOCK: [2019-05-24 Fri 10:15]--[2019-05-24 Fri 10:57] =>  0:42
+    CLOCK: [2019-05-23 Thu 14:22]--[2019-05-23 Thu 15:32] =>  1:10
     CLOCK: [2019-05-23 Thu 14:19]--[2019-05-23 Thu 14:21] =>  0:02
     CLOCK: [2019-05-23 Thu 14:13]--[2019-05-23 Thu 14:18] =>  0:05
     CLOCK: [2019-05-23 Thu 14:02]--[2019-05-23 Thu 14:12] =>  0:10
@@ -471,6 +473,7 @@ Notes:
     mopped up by resolving the templating + defaults story. One quick
     hack we can make to address this issue is to have some features
     which do not get expressed into the static configuration.
+- need to validate that simple name is valid and not a keyword.
 
 Approach:
 
@@ -483,6 +486,11 @@ Approach:
 - update resolver to resolve static configurations.
 - generate the struct for the static configuration.
 - generate a method to read the struct from a dynamic configuration.
+
+*** STARTED Rename =masd.stitch.wale.text_template=                   :story:
+
+This field name results in invalid c++ code. We should also check that
+all feature names are validated.
 
 *** Move models into the project directory                            :story:
 
